@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <!--
  Licensed to the Apache Software Foundation (ASF) under one or more
@@ -34,6 +34,16 @@
   <filter>
     <filter-name>SolrRequestFilter</filter-name>
     <filter-class>org.apache.solr.servlet.SolrDispatchFilter</filter-class>
+    <!--
+    <init-param>
+      <param-name>handle-select</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+      <param-name>path-prefix</param-name>
+      <param-value>/xxx</param-value>
+    </init-param>
+    -->
   </filter>
   <filter-mapping>
     <filter-name>SolrRequestFilter</filter-name>
